--- a/style.css
+++ b/style.css
@@ -24,12 +24,7 @@ h1 {
 h2 {
     text-align: center;
     font-weight: bold;
-    font-size: 1.5em;
-    margin-bottom: 10px;
-}
-
-.subtitle {    
-    margin-bottom: 64px;
+    font-size: 1.5em;    
 }
 
 hr {
@@ -40,9 +35,14 @@ hr {
     margin-bottom: 10px;
 }
 
-.center {
+.counter-container {
     text-align: center; 
     font-weight: bold;
+    margin: 64px 0;
+}
+
+.counter-container > p {
+    text-shadow: #E77471 0 0 10px,#E77471 0 0 10px,#E77471 0 0 10px,#E77471 0 0 10px,#E77471 0 0 10px;
 }
 
 .counter {
@@ -50,30 +50,24 @@ hr {
     font-size: 2em;
 }
 
-.button-container {
-    text-align: center;
-    margin-top: 16px;
-}
-
 .counter-button {
     background-color: #574f84;
     border: none;
     color: white;
     padding: 15px 32px;
-    text-align: center;
     text-decoration: none;
     font-size: 1em;
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
+    margin-top: 16px;
 }
 
 .counter-button:hover {
     background-color: #2d2463;
 }
 
-.animation-container {
-    height: 256px;
-    text-align: right;
+.gallery-title {
+    margin-bottom: 10px;
 }
 
 .flexbox {
